welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:54: error: type mismatch;
 found   : Double
 required: Int
		recule(nbPas);	
                       ^FlowerCase:57: error: type mismatch;
 found   : Double
 required: Int
		avance(nbPas);
                       ^